[package]
name = "rusty_eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = {version ="1.0",  features = ["full"]}
clap = { version = "3.1.12", features = ["derive"] }
rasciigraph = "0.1.1"
